DigIt CHANGE LOG
======================

2026/01/29 Solved Bug in Custom Mode Take Button don't update when Crop Areas is nil/not nil
        26 Exception in Session Actions don't auto-save

2025/11/25 Hide rollCrops in FullArea Mode (Beppe's first suggestion)

2025/10/31 Release 0.4;
           Solved Select from one Source to Another Bug;
           Updated Languages;

2025/10/08 Added Language to Settings;
           Moved Settings Load in Bridge_Impl;
           Added TranslateLanguage proc in Utils;
           Main Project use TranslateLanguage proc;
           WIA Source ProgressShowWaiting use Manufacturer and Name not ID;

        07 Added Waiting for Source Connection Dialog;
           Added CancelVisible default param to Bridge_Impl ProgressShow;
           Added ProgressShowWaiting to Bridge_Impl;
           Changed actTakeBuildDuplex Caption;
           Changed some Italian translation;

2025/09/22 Fixed Folder Source Bug with only one file;
           ExportFiles use new FCL-PDF for Sizes (to test);
           UI Adjusted some Captions and Translations;
           UI Added ToolBar reposition and size calculation;

        05 Deleted Menu Profiles OnPopup (updated in Profiles Edit);
           Added Source_Select with Profiles in MainForm;
           Added Selected Source in MainForm Caption;
           Moved Get Source+Params Title in new TDigIt_Sources.GetTitle;
           Code cleanup;

        04 Solved DigIt_Profiles_Form don't Copy tmp XML to profiles File;
           TDigIt_Sources.Get with SubIndex must select sub item before GetFromUser;
           BuildSourceMenu Use SourceItems.RefreshList intestead of GetCount (to test)

2025/08/28 TDigIt_Sources.Get parameter list has been standardized;
           TDigIt_Sources.Get Added CreateParams param;
           TDigIt_Sources.Select always Create a new Params;
           FormProfiles always create our copy of Params and free it;

        27 Fix RefCount Exception in theBridge;